syntax = "proto3";

package schema;

option java_multiple_files = true;
option java_package = "com.gadgame.schema.protobuf";
option java_outer_classname = "Symbol";
option go_package = "models/";

message SlotsGameSymbolModel {
    string id = 1;
    string name = 2;
    int32 minimum_payline_to_appear = 3;
    int32 chance_ratio = 4;
    bool is_wild = 5;
    bool is_jackpot = 6;
    bool is_scatter = 7;
    repeated double symbol_values = 8;
    oneof symbol {
        AccumulateMultiplierSlotsGameSymbolModel accumulate_multiplier_slots_game_symbol = 9;
        AsymmetricReelsSlotsGameSymbolModel asymmetric_reels_slots_game_symbol = 10;
    }
}

message AddAccumulateMultiplierSlotsGameSymbolRequest {
    string game_id = 1;
    string name = 2;
    int32 minimum_payline_to_appear = 3;
    int32 chance_ratio = 4;
    bool is_wild = 5;
    bool is_jackpot = 6;
    bool is_scatter = 7;
    repeated double symbol_values = 8;
}
  
message UpdateAccumulateMultiplierSlotsGameSymbolRequest {
    string game_id = 1;
    string symbol_id = 2;
    string name = 3;
    int32 minimum_payline_to_appear = 4;
    int32 chance_ratio = 5;
    bool is_wild = 6;
    bool is_jackpot = 7;
    bool is_scatter = 8;
    repeated double symbol_values = 9;
}

message AccumulateMultiplierSlotsGameSymbolModel {
}

message AddAsymmetricReelsSlotsGameSymbolRequest {
    string game_id = 1;
    string name = 2;
    int32 minimum_payline_to_appear = 3;
    int32 chance_ratio = 4;
    bool is_wild = 5;
    bool is_jackpot = 6;
    bool is_scatter = 7;
    repeated double symbol_values = 8;
}
  
message UpdateAsymmetricReelsSlotsGameSymbolRequest {
    string game_id = 1;
    string symbol_id = 2;
    string name = 3;
    int32 minimum_payline_to_appear = 4;
    int32 chance_ratio = 5;
    bool is_wild = 6;
    bool is_jackpot = 7;
    bool is_scatter = 8;
    repeated double symbol_values = 9;
}
  

message AsymmetricReelsSlotsGameSymbolModel {
}